# learn_rust

./: .gitignore  scratchpad.txt
docs/: ai_prompt.txt  learn_rust.html  learn_rust.md  rest_api_guide.md  rust_1_56_and_async_guide.md  rust_refresher.md
projects/01_hello_world/: main
projects/02_hello_cargo/: Cargo.toml
projects/03_guessing_game/: Cargo.toml
projects/04_data_types/: Cargo.toml
projects/08_slices/: Cargo.toml
projects/09_structs/: Cargo.toml
projects/10_enums/: Cargo.toml
projects/11_option_and_match/: Cargo.toml
projects/12_packages_creates_and_modules/: Cargo.toml
projects/13_example_library_crate/: Cargo.toml
projects/14_multi-files/: Cargo.toml
projects/15_common_collections/: Cargo.toml
projects/16_error_handling/: Cargo.toml
projects/17_generic_traits_and_lifetimes/: Cargo.toml
projects/18_lifetimes/: Cargo.toml
projects/19_automated_tests/: Cargo.toml
projects/20_io/: Cargo.toml
projects/21_iterators_and_closures/: Cargo.toml
projects/22_cargo_and_crates_io/: Cargo.toml
projects/22_cargo_and_crates_io/src/: lib.rs  main.rs
projects/23_smart_pointers/: Cargo.toml
projects/24_async_basics/: Cargo.toml
projects/28_sleeping_tcp_server/: Cargo.toml
projects/29_timeout_tcp_client/: Cargo.toml
projects/30_simple_udp_server/: Cargo.toml
projects/31_json_with_serde/: Cargo.toml
projects/32_json_tcp_client_and_server/: Cargo.toml
projects/control_flow/: Cargo.toml
projects/functions/: Cargo.toml
projects/guessing_game/: Cargo.toml
projects/hello_world/: main
projects/ownership/: Cargo.toml
(+37 files in other folders)
