
# Cargo has two main profiles, dev and release.
# Cargo has default settings for each profile when there aren't any [profile.*] sections.
# We can add these to customize...
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# The full list of options can be found at: https://doc.rust-lang.org/cargo/
# #####################

[package]
name = "cargo_and_crates_io"
version = "0.1.0"
authors = ["Martyn C Brown <mart7n@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

